[workspace]
members = [
    "contracts/vesting_contracts",
    "contracts/grant_contracts",
    "contracts/staking_contract",
    "contracts/vesting_status_nft",
    "contracts/vesting_vault",
    "contracts/deposit_to_yield_adapter",
    "contracts/insurance_treasury",
    "src/components/search",
]
resolver = "2"

[workspace.dependencies]
soroban-sdk = { version = "22" }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
